--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DaggerDoughnut</string>
+    <string name="intro">Showing two examples:</string>
+    <string name="example_01">Example #1</string>
+    <string name="example_02">Example #2</string>
 </resources>
